--- a/faces.html
+++ b/faces.html
@@ -201,6 +201,7 @@
 <a href="faces/photo36.jpg" data-lightbox="gallery"><img src="faces/photo36.jpg" class="gallery-img"/></a>
 <a href="faces/photo37.jpg" data-lightbox="gallery"><img src="faces/photo37.jpg" class="gallery-img"/></a>
 <a href="faces/photo38.jpg" data-lightbox="gallery"><img src="faces/photo38.jpg" class="gallery-img"/></a>
+<a href="faces/photo39.jpg" data-lightbox="gallery"><img src="faces/photo39.jpg" class="gallery-img"/></a>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox-plus-jquery.min.js"></script>
 
