--- a/Whispers of my life.html
+++ b/Whispers of my life.html
@@ -245,6 +245,8 @@
 <a href="Whispers of my life/photo35.jpg" data-lightbox="gallery"><img src="Whispers of my life/photo35.jpg" class="gallery-img"/></a>
 <a href="Whispers of my life/photo36.jpg" data-lightbox="gallery"><img src="Whispers of my life/photo36.jpg" class="gallery-img"/></a>
 <a href="Whispers of my life/photo37.jpg" data-lightbox="gallery"><img src="Whispers of my life/photo37.jpg" class="gallery-img"/></a>
+<a href="Whispers of my life/photo38.jpg" data-lightbox="gallery"><img src="Whispers of my life/photo38.jpg" class="gallery-img"/></a>
+
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox-plus-jquery.min.js"></script>
 
