--- a/at_work.html
+++ b/at_work.html
@@ -191,6 +191,11 @@
 <a href="at_work/photo28.jpg" data-lightbox="gallery"><img src="at_work/photo28.jpg" class="gallery-img"/></a>
 <a href="at_work/photo29.jpg" data-lightbox="gallery"><img src="at_work/photo29.jpg" class="gallery-img"/></a>
 <a href="at_work/photo30.jpg" data-lightbox="gallery"><img src="at_work/photo30.jpg" class="gallery-img"/></a>
+<a href="at_work/photo31.jpg" data-lightbox="gallery"><img src="at_work/photo31.jpg" class="gallery-img"/></a>
+<a href="at_work/photo32.jpg" data-lightbox="gallery"><img src="at_work/photo32.jpg" class="gallery-img"/></a>
+<a href="at_work/photo33.jpg" data-lightbox="gallery"><img src="at_work/photo33.jpg" class="gallery-img"/></a>
+<a href="at_work/photo34.jpg" data-lightbox="gallery"><img src="at_work/photo34.jpg" class="gallery-img"/></a>
+<a href="at_work/photo35.jpg" data-lightbox="gallery"><img src="at_work/photo35.jpg" class="gallery-img"/></a>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox-plus-jquery.min.js"></script>
 
