--- a/topia.html
+++ b/topia.html
@@ -235,6 +235,7 @@
 <a href="topia/photo33.jpg" data-lightbox="gallery"><img src="topia/photo33.jpg" class="gallery-img"/></a>
 <a href="topia/photo34.jpg" data-lightbox="gallery"><img src="topia/photo34.jpg" class="gallery-img"/></a>
 <a href="topia/photo35.jpg" data-lightbox="gallery"><img src="topia/photo35.jpg" class="gallery-img"/></a>
+<a href="topia/photo36.jpg" data-lightbox="gallery"><img src="topia/photo36.jpg" class="gallery-img"/></a>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox-plus-jquery.min.js"></script>
 
