--- a/faces.html
+++ b/faces.html
@@ -205,6 +205,7 @@
 <a href="faces/photo40.jpg" data-lightbox="gallery"><img src="faces/photo40.jpg" class="gallery-img"/></a>
 <a href="faces/photo41.jpg" data-lightbox="gallery"><img src="faces/photo41.jpg" class="gallery-img"/></a>
 <a href="faces/photo42.jpg" data-lightbox="gallery"><img src="faces/photo42.jpg" class="gallery-img"/></a>
+<a href="faces/photo43.jpg" data-lightbox="gallery"><img src="faces/photo43.jpg" class="gallery-img"/></a>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox-plus-jquery.min.js"></script>
 
