--- a/colored_street.html
+++ b/colored_street.html
@@ -197,6 +197,7 @@
     <a href="colored_street/photo33.jpg" data-lightbox="gallery"><img src="colored_street/photo33.jpg" class="gallery-img"/></a>
     <a href="colored_street/photo34.jpg" data-lightbox="gallery"><img src="colored_street/photo34.jpg" class="gallery-img"/></a>
     <a href="colored_street/photo35.jpg" data-lightbox="gallery"><img src="colored_street/photo35.jpg" class="gallery-img"/></a>
+    <a href="colored_street/photo36.jpg" data-lightbox="gallery"><img src="colored_street/photo36.jpg" class="gallery-img"/></a>
 </div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox-plus-jquery.min.js"></script>
